fix bg color, border, spacing for table

--- a/src/frontend/screens/DownloadManager/components/DownloadTable/index.module.scss
+++ b/src/frontend/screens/DownloadManager/components/DownloadTable/index.module.scss
@@ -1,9 +1,29 @@
 .dmItemList {
-  border: solid 2px var(--input-background);
   background-color: var(--color-neutral-800);
-  border-radius: 6px;
+  border-radius: var(--space-sm-fixed);
   margin: var(--space-3xs) 0px;
   width: 100%;
   text-align: center;
   vertical-align: middle;
+  -webkit-border-vertical-spacing: 0px;
+  -webkit-border-horizontal-spacing: 0px;
+
+  tr:first-child {
+    background-color: var(--color-neutral-700);
+    th {
+      padding: var(--space-sm-fixed) 0px;
+
+      &:first-child {
+        border-top-left-radius: var(--space-sm-fixed);
+      }
+
+      &:last-child {
+        border-top-right-radius: var(--space-sm-fixed);
+      }
+    }
+  }
+
+  tr > td {
+    padding: var(--space-sm-fixed) var(--space-2lg-fixed);
+  }
 }
